fix responsive image on tablet (#541)

--- a/assets/src/scss/2-vendors/glide.theme.scss
+++ b/assets/src/scss/2-vendors/glide.theme.scss
@@ -1,16 +1,9 @@
 .glide {
   $that: '.glide' !default;
-
-
-  &__wrapper {}
-
-
-  &__track {}
-
-
   &__slide {
     img {
       padding-left: 1px;
+      width: 100%;
     }
   }
 
